--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation 'junit:junit:4.12'
+	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1'
 }
 
 test {
