게시글 목록
- 초기 데이터 실행 스크립트 작성: 데이터 입력과정을 생략하기 위한 .sql
- 목록 출력을 위한 hbs 수정: main.hbs에 목록출력 테이블 추가
- Repository에 Query 추가: HQL을 이용한 @Query 어노테이션 작성
- Service 수정 및 새 Dto 생성
- Controller 수정 후 테스트

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,12 @@ spring:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: sa
-    password: 
+    password:
+    data: classpath:data-h2.sql
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
   h2:
     console:
       enabled: true
