Application.yml의 외부영향 제거
- 데이터 입력의 번거로움 제거를 위해 insert 쿼리 실행 Setting을 다시 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
-  datasource: # 계정정보를 명시해 주어야 접속이 가능하다.
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-    data: classpath:data-h2.sql
+#  datasource: # 계정정보를 명시해 주어야 접속이 가능하다.
+#    url: jdbc:h2:mem:testdb
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password:
+#    data: classpath:data-h2.sql
   jpa:
     show-sql: true
-    hibernate:
-      ddl-auto: create-drop
-  h2:
-    console:
-      enabled: true
+#    hibernate:
+#      ddl-auto: create-drop
+#  h2:
+#    console:
+#      enabled: true
 
 
