--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ cache:
 
 script: "./gradlew clean build"
 
+// 권한 추가를 위한 설정
+before_install: 
+  - chmod +x gradlew 
+
 notifications:
   email:
     recipients:
