--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  profiles:
+    active: local #기본환경
+
+---
+spring:
+  profiles: local
   datasource: # 계정정보를 명시해 주어야 접속이 가능하다.
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
