Nginx를 이용한 무중단 배포
- application.yml 수정: 초기 Data 삽입으로 인한 영향 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
-    data: classpath:data-h2.sql
+#    data: classpath:data-h2.sql
   jpa:
     show-sql: true
     hibernate:
