--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	}
 	implementation 'junit:junit:4.12'
 	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1'
+	compile 'org.mariadb.jdbc:mariadb-java-client'
 }
 
 test {
