--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,6 +2,10 @@
 spring:
   profiles:
     active: local
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
 # local
 ---
