--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,34 @@
 spring:
   profiles:
-    active: local #기본환경
+    active: spring #기본환경
 #  jpa:
 #    properties:
 #      hibernate:
 #        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+---
+spring:
+  profiles: spring
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://15.164.84.158:3306/test
+    username: test
+    password: test
+
+  hikari:
+    maximum-pool-size: 10
+    data-source-properties:
+      cachePrepStmts: true
+      prepStmtCacheSize: 250
+      prepStmtCacheSqlLimit: 2048
+      useServerPrepStmts: true
+
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
+        show-sql: true
+        format-sql: true
+        use-sql-comment: true
 
 ---
 spring:
