--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,47 +5,46 @@ spring:
 #    properties:
 #      hibernate:
 #        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
 ---
 spring:
-  profiles: spring
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://15.164.84.158:3306/test
-    username: test
     password: test
-
+    url: "jdbc:mariadb://15.164.84.158:3306/test"
+    username: test
   hikari:
-    maximum-pool-size: 10
     data-source-properties:
       cachePrepStmts: true
       prepStmtCacheSize: 250
       prepStmtCacheSqlLimit: 2048
       useServerPrepStmts: true
-
+    maximum-pool-size: 10
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MariaDBDialect
-        show-sql: true
         format-sql: true
+        show-sql: true
         use-sql-comment: true
+  profiles: spring
 
 ---
 spring:
-  profiles: local
-  datasource: # 계정정보를 명시해 주어야 접속이 가능하다.
-    url: jdbc:h2:mem:testdb
+  datasource:
     driver-class-name: org.h2.Driver
+    password: ~
+    url: "jdbc:h2:mem:testdb"
     username: sa
-    password:
-    #data: classpath:data-h2.sql
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: create-drop
   h2:
     console:
       enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+  profiles: local
+
 
 # 운영 환경
 ---
