--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	compile 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation 'junit:junit:4.12'
 	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1'
 	compile 'org.mariadb.jdbc:mariadb-java-client'
+
 }
 
 test {
