--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ dependencies {
 	}
 	implementation 'junit:junit:4.12'
 
-	compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1'
+	//compile 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.1'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile 'org.mariadb.jdbc:mariadb-java-client'
 
 	compileOnly 'org.projectlombok:lombok:1.18.12'
