--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,7 @@ spring:
   jpa:
     #database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
+      #dialect : org.hibernate.dialect.H2Dialect
       ddl-auto: create-drop
       #dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       #dialect: org.hibernate.dialect.MariaDBDialect
