--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,15 +5,17 @@ spring:
     password: ~
     url: "jdbc:h2:mem:testdb"
     username: sa
-  h2:
-    console:
-      enabled: true
+
   jpa:
     #database-platform: org.hibernate.dialect.MariaDBDialect
     hibernate:
-      #dialect : org.hibernate.dialect.H2Dialect
       ddl-auto: create-drop
+
+      #dialect : org.hibernate.dialect.H2Dialect
       #dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       #dialect: org.hibernate.dialect.MariaDBDialect
     show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
 
