--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
+buildscript{
+	ext{
+		queryDslVersion="4.4.0"
+	}
+}
+
 plugins {
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	//id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
 	id 'eclipse'
 }
@@ -45,8 +52,56 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.16'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
+	//implementation 'com.querydsl:querydsl-jpa'
+
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
+//	testImplementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+//	testAnnotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
+
 
 }
+
+//def querydslSrcDir='src/main/generated'
+//
+//querydsl {
+//	library="com.querydsl:querydsl-apt"
+//	jpa=true
+//	querydslSourcesDir = querydslSrcDir
+//
+//}
+//
+//sourceSets{
+//	main.java.srcDirs = [ 'src/main/java', querydslSrcDir ]
+//}
+
+configure(querydslProjects) {
+	apply plugin: "io.spring.dependency-management"
+
+	dependencies {
+		compile("com.querydsl:querydsl-core")
+		compile("com.querydsl:querydsl-jpa")
+
+		annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+		annotationProcessor("jakarta.persistence:jakarta.persistence-api") // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+		annotationProcessor("jakarta.annotation:jakarta.annotation-api") // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
+	}
+
+	// clean 태스크와 cleanGeneatedDir 태스크 중 취향에 따라서 선택하세요.
+	/** clean 태스크 실행시 QClass 삭제 */
+	clean {
+		delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
+	}
+
+	/**
+	 * 인텔리제이 Annotation processor 에 생성되는 'src/main/generated' 디렉터리 삭제
+	 */
+//	task cleanGeneatedDir(type: Delete) { // 인텔리제이 annotation processor 가 생성한 Q클래스가 clean 태스크로 삭제되는 게 불편하다면 둘 중에 하나를 선택
+//		delete file('src/main/generated')
+//	}
+}
+
+
 
 test {
 	testLogging{
@@ -54,3 +109,4 @@ test {
 	}
 	useJUnitPlatform()
 }
+
