--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,32 @@ plugins {
 	id 'eclipse'
 }
 
+//configure(querydslProjects) {
+//	apply plugin: "io.spring.dependency-management"
+//
+//	dependencies {
+//		compile("com.querydsl:querydsl-core")
+//		compile("com.querydsl:querydsl-jpa")
+//
+//		annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+//		annotationProcessor("jakarta.persistence:jakarta.persistence-api") // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+//		annotationProcessor("jakarta.annotation:jakarta.annotation-api") // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
+//	}
+//
+//	// clean 태스크와 cleanGeneatedDir 태스크 중 취향에 따라서 선택하세요.
+//	/** clean 태스크 실행시 QClass 삭제 */
+//	clean {
+//		delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
+//	}
+//
+//	/**
+//	 * 인텔리제이 Annotation processor 에 생성되는 'src/main/generated' 디렉터리 삭제
+//	 */
+////	task cleanGeneatedDir(type: Delete) { // 인텔리제이 annotation processor 가 생성한 Q클래스가 clean 태스크로 삭제되는 게 불편하다면 둘 중에 하나를 선택
+////		delete file('src/main/generated')
+////	}
+//}
+
 group = 'org.zerock'
 version = '0.0.3'
 sourceCompatibility = '1.8'
@@ -26,6 +52,7 @@ repositories {
 	mavenCentral()
 }
 
+apply plugin: "io.spring.dependency-management"
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -52,14 +79,27 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.16'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
-	//implementation 'com.querydsl:querydsl-jpa'
+	// queryDsl
+	compile("com.querydsl:querydsl-core")
+	compile("com.querydsl:querydsl-jpa")
 
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-	implementation "com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
-//	testImplementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-//	testAnnotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}:jpa"
+	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor("jakarta.persistence:jakarta.persistence-api") // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+	annotationProcessor("jakarta.annotation:jakarta.annotation-api") // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
 
+}
 
+def generated='src/main/generated'
+sourceSets{
+	main.java.srcDirs += [generated]
+}
+
+tasks.withType(JavaCompile){
+	options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean {
+	delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
 }
 
 //def querydslSrcDir='src/main/generated'
@@ -74,32 +114,6 @@ dependencies {
 //sourceSets{
 //	main.java.srcDirs = [ 'src/main/java', querydslSrcDir ]
 //}
-
-configure(querydslProjects) {
-	apply plugin: "io.spring.dependency-management"
-
-	dependencies {
-		compile("com.querydsl:querydsl-core")
-		compile("com.querydsl:querydsl-jpa")
-
-		annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
-		annotationProcessor("jakarta.persistence:jakarta.persistence-api") // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
-		annotationProcessor("jakarta.annotation:jakarta.annotation-api") // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
-	}
-
-	// clean 태스크와 cleanGeneatedDir 태스크 중 취향에 따라서 선택하세요.
-	/** clean 태스크 실행시 QClass 삭제 */
-	clean {
-		delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
-	}
-
-	/**
-	 * 인텔리제이 Annotation processor 에 생성되는 'src/main/generated' 디렉터리 삭제
-	 */
-//	task cleanGeneatedDir(type: Delete) { // 인텔리제이 annotation processor 가 생성한 Q클래스가 clean 태스크로 삭제되는 게 불편하다면 둘 중에 하나를 선택
-//		delete file('src/main/generated')
-//	}
-}
 
 
 
