--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       #dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       #dialect: org.hibernate.dialect.MariaDBDialect
     show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
+    properties:
+      hibernate:
+        format_sql: true
 
