--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
 	runtimeOnly 'com.h2database:h2'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
